[gd_scene load_steps=11 format=3 uid="uid://c1xi5bkmmdyco"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_mvlak"]
[ext_resource type="Script" path="res://Player/PlayerCamera.gd" id="2_beep0"]
[ext_resource type="Script" path="res://Env/Bg.gd" id="3_mtyq7"]
[ext_resource type="Texture2D" uid="uid://bhypxfmcst4re" path="res://Assets/Player.png" id="4_odkig"]
[ext_resource type="Script" path="res://Assets/ShadowSprite2D.gd" id="5_6710u"]
[ext_resource type="FontFile" uid="uid://ccc34e8v33urn" path="res://Assets/InriaSans-Regular.ttf" id="6_vtrwo"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_08b3c"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lr6iw"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lwtjm"]
radius = 88.3629

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wi7i7"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 10.0
expand_margin_right = 10.0

[node name="Player" type="RigidBody2D"]
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_08b3c")
custom_integrator = true
continuous_cd = 2
max_contacts_reported = 5
contact_monitor = true
lock_rotation = true
script = ExtResource("1_mvlak")
text_path = NodePath("Text/HBoxContainer/VBoxContainer/Dialog")
name_path = NodePath("Text/HBoxContainer/VBoxContainer/Name")
texture_path = NodePath("Text/HBoxContainer/TextureRect")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lr6iw")

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
editor_draw_limits = true
script = ExtResource("2_beep0")

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("CircleShape2D_lwtjm")

[node name="Bg" type="Node2D" parent="."]
z_index = -1
z_as_relative = false
script = ExtResource("3_mtyq7")

[node name="InteriorBg" type="ColorRect" parent="Bg"]
visible = false
offset_left = -960.0
offset_top = -528.0
offset_right = 960.0
offset_bottom = 560.0
color = Color(0, 0, 0, 1)

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("4_odkig")
script = ExtResource("5_6710u")

[node name="Text" type="Node2D" parent="."]
position = Vector2(0, -64)
scale = Vector2(0.4, 0.4)
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Text"]
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0

[node name="TextureRect" type="TextureRect" parent="Text/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Text/HBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Text/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_vtrwo")
theme_override_font_sizes/font_size = 30
text = "johan"

[node name="Dialog" type="Label" parent="Text/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_vtrwo")
theme_override_font_sizes/font_size = 40
text = "light me a ciggy yopu cunt"

[node name="Panel" type="Panel" parent="Text/HBoxContainer/VBoxContainer/Dialog"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wi7i7")

[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_interact_area_area_exited"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
